# composable_daw

./: .gitignore  Cargo.toml  TODO  build.rs  slint-lsp.json
.cursor/rules/: action-message-pattern.mdc  architecture-structure.mdc  audio-handling.mdc  core-rust-standards.mdc  error-handling.mdc  iced-ui-patterns.mdc  new-code.mdc  testing.mdc  thread-behaviour.mdc  traits-and-docs.mdc
documentation/: TEST_SPECIFICATION.md  USER_GUIDE.md  functionality.yaml
soundfonts/: CMX_2.2.sf2
src/: main.rs  midi_ports.rs  synth.rs
src/engine/: actions.rs  audio.rs  buss.rs  mod.rs  sources.rs  synth.rs
src/models/: components.rs  instrument.rs  instuments.rs  mod.rs  sequences.rs  shared.rs
src/threads/: mod.rs
src/threads/audio/: buffered_output.rs  buss.rs  interfaces.rs  mod.rs  stereo_output.rs
src/threads/engine/: actions.rs  buss.rs  mod.rs  sources.rs  synth.rs
src/threads/ui/: actions.rs  composer_window.rs  control_bar.rs  editor_window.rs  file_picker.rs  instrument_editor.rs  instrument_editor_event.rs  main_menu.rs  main_window.rs  mod.rs  (+3 more)
src/ui/: actions.rs  composer_window.rs  control_bar.rs  editor_window.rs  file_picker.rs  main_menu.rs  main_window.rs  midi_editor.rs  mod.rs  pattern_editor.rs  track_settings.rs
ui/: app-window.slint  handlers.slint  main.slint  models.slint  pattern_editor.slint
ui/components/: composer_window.slint  control_bar.slint  graveyard.slint  pattern_editor.slint  track_settings.slint  transport.slint
ui/designkit/: containers.slint
ui/globals/: handlers.slint  state.slint
ui/models/: midi.slint  models.slint
(+15 files in other folders)
