[package]
name = "composable_daw"
version = "0.1.0"
edition = "2024"

[dependencies]
fluidsynth = "0.0.1"
midir = "0.10.2"
oxisynth = "0.1.0"
cpal = "0.15"
ringbuf = "0.4.8"
iced = { version = "0.13.1", features = ["canvas", "tokio", "image"] }
log = "0.4.28"
pretty_env_logger = "0.5.0"
rfd = "0.15.4"
iced_aw = "0.12.2"
crossbeam-channel = "0.5.15"

